# SRE-Gym

./: .dockerignore  .gitignore  Dockerfile  README.md  dummy_change.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
data/: README.md
scripts/: generate_tasks_from_loghub.py  prepare_datasets.py
server/: app.py
src/: client.py  environment.py  graders.py  models.py  server.py
src/incidents/: task1_easy.json  task2_medium.json  task3_hard.json
tests/: test_env.py
