[project]
name = "sre-gym"
version = "1.0.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "gradio>=4.0.0",
    "datasets>=2.14.0",
    "openenv-core>=0.2.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
